# fileprocessor

./: .env  .env.example  .gitignore  Dockerfile  README.md  check-lint.sh  docker-compose.yml  download_files.py  entrypoint.sh  hadoop-metrics2.properties  process_files_2.py  pyproject.toml  spark.Dockerfile  verify.py  verify_1.py
.github/workflows/: lint.yml
downloads/files/: 00Tree.html
src/: db.py  main.py  process_script.py  utils.py
src/database/: db.py  file_metadata.py  models.py  services.py  utils.py
src/database/alembic/: env.py
src/database/alembic/versions/: 5f5ae4beda9c_added_metadata_table.py
src/file_processing/: entities.py  services.py  utils.py
src/file_storage/: base.py  entities.py  s3.py  storage.py
src/utils/: entities.py  settings.py  utils.py
tests/: conftest.py
tests/test_database/: test_models.py
tests/test_file_processing/: test_entities.py  test_services.py
tests/test_file_storage/: test_s3_storage.py
